Adding many more TS snippets.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -1114,6 +1114,75 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "486f4d96",
+   "metadata": {},
+   "source": [
+    "# Boxing\n",
+    "\n",
+    "Boxing of primitive types to reference types is quite clunky compared to other languages.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "c330c04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "hi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const x = 5;\n",
+    "\n",
+    "  // This line isn't even allowed because\n",
+    "  // number is a primitive that doesn't\n",
+    "  // inherit Object and can't be treated\n",
+    "  // like it's in the class hierarchy.\n",
+    "\n",
+    "  //console.log(x instanceof Object);\n",
+    "\n",
+    "  const s: string = \"hi\";\n",
+    "\n",
+    "  // Even string is not an Object!\n",
+    "  //console.log(s instanceof Object);\n",
+    "\n",
+    "  // Under the hood, these convert to a\n",
+    "  // boxed type that inherits object!\n",
+    "  console.log(x.toString());\n",
+    "  console.log(s.toString());\n",
+    "\n",
+    "  // You can use the boxed types directly\n",
+    "  // like this.\n",
+    "  const x_b = Number(x);\n",
+    "  const s_b = String(s);\n",
+    "\n",
+    "  // But you still can't treat them like\n",
+    "  // instances of Object (what?????!!!!).\n",
+    "  //console.log(x_b instanceof Object);\n",
+    "  //console.log(s_b instanceof Object);\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "480b885b",
    "metadata": {},
    "source": [
@@ -1350,12 +1419,179 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1c781a3",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fee09e49",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Declaration Order\n",
+    "\n",
+    "TypeScript is **pretty flexible** about order of declarations at the same level.\n",
+    "\n",
+    "Also note that inner names can **hide outer** names as you'd expect in any language.\n",
+    "\n",
+    "However, you **cannot redeclare the same name at the same level**, which is why all my jupyter cells have immediately called lambdas.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "c2f47275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // We'll define f later.\n",
+    "  const x = f();\n",
+    "\n",
+    "  function f() {\n",
+    "    return 5;\n",
+    "  }\n",
+    "\n",
+    "  console.log(x);\n",
+    "})();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "b1abaac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // Obviously this can't work.\n",
+    "  //const x = y;\n",
+    "  const y = 5;\n",
+    "})();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "f1bb70f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class A {\n",
+    "    f(): B {\n",
+    "      return new B();\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  class B {}\n",
+    "\n",
+    "  const a = new A();\n",
+    "  a.f();\n",
+    "})();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "3b0829a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // This one doesn't work\n",
+    "  /*\n",
+    "  class A extends B {\n",
+    "  }\n",
+    "  \n",
+    "  class B {\n",
+    "  }\n",
+    "  \n",
+    "  const a = new A();\n",
+    "  */\n",
+    "})();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "c4cfddf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // This is even easier because when you say 'this' it already\n",
+    "  // knows where to look.\n",
+    "  class MyClass {\n",
+    "    x = this.f();\n",
+    "\n",
+    "    g() {\n",
+    "      return this.f();\n",
+    "    }\n",
+    "    f() {\n",
+    "      return 5;\n",
+    "    }\n",
+    "  }\n",
+    "})();\n"
+   ]
   }
  ],
  "metadata": {
