--- a/typescript/Control Flow.ipynb
+++ b/typescript/Control Flow.ipynb
@@ -411,6 +411,19 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "0120c6db",
+   "metadata": {},
+   "source": [
+    "# Context Management\n",
+    "\n",
+    "No special construct for it. Use **try/catch/finally** and implement your own **dispose** method.\n",
+    "\n",
+    "There are **no destructors**.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "32b2222d",
    "metadata": {},
    "source": [
@@ -475,9 +488,202 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "00e56ca9",
+   "metadata": {},
+   "source": [
+    "# Type Narrowing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fb727b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const x: number | null = 5;\n",
+    "  if (x !== null) {\n",
+    "    // Within this block, TypeScript narrows down the type of `x` to `number`\n",
+    "    // Thus, we don't have to use ! or ?\n",
+    "    const y = x + 5;\n",
+    "    console.log(y); // Output: 10\n",
+    "  }\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6bda25f5",
+   "metadata": {},
+   "source": [
+    "# Single Line Braces\n",
+    "\n",
+    "Unlike in C++, Java, and C#, TypeScript people like to wrap single lines in {} after control flow statements like 'if'.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3b49ad9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statement 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // Motivating example - doesn't do what it looks like!\n",
+    "  if (false) console.log(\"Statement 1\");\n",
+    "  console.log(\"Statement 2\"); // This outputs\n",
+    "\n",
+    "  // Clearer and more correct version\n",
+    "  if (false) {\n",
+    "    console.log(\"Statement 1\"); // No output\n",
+    "    console.log(\"Statement 2\");\n",
+    "  }\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "72f096d0",
+   "metadata": {},
+   "source": [
+    "# Generators/Lazy Lists\n",
+    "\n",
+    "**can't run in jupyter**\n",
+    "\n",
+    "Just like in Python, you can even **send in values** (use the _next_ call to do it).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7500ed4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "TS2318: Cannot find global type 'IterableIterator'.\n\nLine 2, Character 38\n  function* lazyList(limit: number): IterableIterator<number> {\n_____________________________________^\nTS2304: Cannot find name 'IterableIterator'.\n\nLine 25, Character 38\n  function* lazyList(limit: number): IterableIterator<number> {\n_____________________________________^\nTS2304: Cannot find name 'IterableIterator'.\n\nLine 32, Character 15\n  const list: IterableIterator<number> = lazyList(5); // Generate values up to 5\n______________^\nTS2304: Cannot find name 'IterableIterator'.\n\nLine 33, Character 34\n  const values: number[] = Array.from(list); // Convert generator to an array\n_________________________________^\nTS2550: Property 'from' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+     "output_type": "error",
+     "traceback": [
+      "Error: TS2318: Cannot find global type 'IterableIterator'.",
+      "",
+      "Line 2, Character 38",
+      "  function* lazyList(limit: number): IterableIterator<number> {",
+      "_____________________________________^",
+      "TS2304: Cannot find name 'IterableIterator'.",
+      "",
+      "Line 25, Character 38",
+      "  function* lazyList(limit: number): IterableIterator<number> {",
+      "_____________________________________^",
+      "TS2304: Cannot find name 'IterableIterator'.",
+      "",
+      "Line 32, Character 15",
+      "  const list: IterableIterator<number> = lazyList(5); // Generate values up to 5",
+      "______________^",
+      "TS2304: Cannot find name 'IterableIterator'.",
+      "",
+      "Line 33, Character 34",
+      "  const values: number[] = Array.from(list); // Convert generator to an array",
+      "_________________________________^",
+      "TS2550: Property 'from' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+      "    at execTranspile (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  function* lazyList(limit: number): IterableIterator<number> {\n",
+    "    let i = 0;\n",
+    "    while (i < limit) {\n",
+    "      yield i++;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  const list = lazyList(5); // Generate values up to 5\n",
+    "\n",
+    "  console.log(list.next().value); // 0\n",
+    "  console.log(list.next().value); // 1\n",
+    "  console.log(list.next().value); // 2\n",
+    "  console.log(list.next().value); // 3\n",
+    "  console.log(list.next().value); // 4\n",
+    "  console.log(list.next().value); // undefined\n",
+    "\n",
+    "  // You can also iterate over the lazy list using a for...of loop\n",
+    "  for (const value of list) {\n",
+    "    console.log(value);\n",
+    "  }\n",
+    "})();\n",
+    "\n",
+    "(() => {\n",
+    "  function* lazyList(limit: number): IterableIterator<number> {\n",
+    "    let i = 0;\n",
+    "    while (i < limit) {\n",
+    "      yield i++;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  const list: IterableIterator<number> = lazyList(5); // Generate values up to 5\n",
+    "  const values: number[] = Array.from(list); // Convert generator to an array\n",
+    "\n",
+    "  for (const value of values) {\n",
+    "    console.log(value);\n",
+    "  }\n",
+    "})();\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a758b4",
+   "id": "907bd052",
    "metadata": {},
    "outputs": [],
    "source": []
