--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "id": "ad12fc65",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "undefined"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,10 +446,14 @@
     "    }\n",
     "  };\n",
     "\n",
-    "  // Immediate lambda call\n",
+    "  // IIFE (immediately invoked function expression)\n",
+    "  // Create lambda and call it right away.\n",
     "  (() => {\n",
     "    console.log(\"lambda call!\");\n",
     "  })();\n",
+    "\n",
+    "  // List of lambdas\n",
+    "  const fns: (() => void)[] = [];\n",
     "\n",
     "  // Function calls\n",
     "  console.log(addNumbers(2, 3)); // Output: 5\n",
@@ -461,6 +465,75 @@
     "  greet(); // Output: Hello, world!\n",
     "  greet2(); // Output: Hello, world 2!\n",
     "  printEvenNumbers([1, 2, 3, 4, 5, 6]); // Output: 2 4 6\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "58f3ed9f",
+   "metadata": {},
+   "source": [
+    "# Closures\n",
+    "\n",
+    "Closures default to capturing **by reference** even for primitive types. But there are certain situations where it will close **by value**, such as a loop variable in the below example. This is different from Python which does not create a new lexical variable on each loop iteration.\n",
+    "\n",
+    "To change x to by reference, you'd move its declaration out of the loop.\n",
+    "\n",
+    "To change y to be by value, you could use an **immediately called lambda** such as the ones used in these notebooks on the first and last lines. Then the value passed in would be lexically captured.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "031d989b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const fns: (() => void)[] = [];\n",
+    "  // Closes over y by REFERENCE\n",
+    "  let y = 0;\n",
+    "  for (let x = 0; x < 10; x++) {\n",
+    "    // Closes over x by VALUE\n",
+    "    fns.push(() => {\n",
+    "      console.log(x);\n",
+    "      y = x;\n",
+    "    });\n",
+    "  }\n",
+    "\n",
+    "  for (const fn of fns) {\n",
+    "    fn();\n",
+    "  }\n",
+    "  console.log(y);\n",
     "})();\n"
    ]
   },
