--- a/typescript/Generics.ipynb
+++ b/typescript/Generics.ipynb
@@ -6,7 +6,9 @@
    "id": "2565917d",
    "metadata": {},
    "source": [
-    "# Generic Function\n"
+    "# Generic Function\n",
+    "\n",
+    "Note that unlike Java, you do not have to use the boxed types for type arguments.\n"
    ]
   },
   {
