--- a/typescript/Setup.ipynb
+++ b/typescript/Setup.ipynb
@@ -31,8 +31,7 @@
     "   - **npm** is included with node and will manage packages for us (within an nvm environment)\n",
     "1. `npm install -g typescript`\n",
     "   - a lot of people get angry if you install globally like this, but since the Angular docs recommend it for their package, it wouldn't make sense to not do it for TS\n",
-    "   - if you don't do it globally, you'll have to switch to the folder with a local install and do `npm run` in front all the time - it's not a nice experience IMO\n",
-    "   - TODO: learn about **npx** and whether global installs are still needed (probably)\n",
+    "   - if you don't do it globally, you'll have to switch to the folder with a local install and do `npx` in front all the time - it's not a nice experience IMO\n",
     "1. `npm install -g ts-node`\n",
     "   - I don't think it's required but it's convenient sometimes to have a repl at the terminal\n",
     "1. (Optional) `npm instsall -g @angular/cli` if going to do Angular work\n",
@@ -82,7 +81,7 @@
    "source": [
     "`tsc myfile.ts` will turn _myfile.ts_ into _myfile.js_ right next to it by default. It will be functionally the same but will strip out all the extra type safety and such that TypeScript provides (while performing appropriate checks in the process), leaving a regular old JS file that a browser can understand.\n",
     "\n",
-    "`tsc` in a folder or subfolder of a folder that contains a **tsconfig.json** file will use that file to compile a whole project according to the settings in that file.\n"
+    "`tsc` in a folder or subfolder of a folder that contains a **tsconfig.json** file will use that file to compile a whole project according to the settings in that file. You can make a new one with `tsc --init`.\n"
    ]
   },
   {
@@ -224,23 +223,16 @@
     "```\n",
     "You are a fullstack developer with decades of experience in TypeScript, Python, C++, and Java. You are aware of all the latest developments in these languages and prefer to use newer syntax and recommended conventions when you can. You are also an expert at configuring your build, test, and deployment infrastructure.  Keep these things in mind for the rest of this conversation.\n",
     "\n",
-    "From now on, when I put text in [], it means I'd like to see a TypeScript snippet that demonstrates the feature given inside the []. Try to cover all the angles of that feature so that I can compile a complete catalogue of TypeScript syntax and libraries via my snippets.\n",
+    "From now on, when I put text in [], it means I'd like to see a TypeScript snippet that demonstrates the feature given inside the []. Try to cover all the angles of that feature so that I can compile a complete catalogue of TypeScript syntax and libraries via my snippets.  Try to put details in comments inside the snippet rather than making lists outside.\n",
+    "Please also enclose the whole snippet in a lambda and call it right away. That way I can paste it directly in jupyter and run it multiple times without name clashes.\n",
+    "\n",
+    "When I type text in between !!, it means I ran the code you gave me in a jupyter notebook cell and get the error in between !!.\n",
     "\n",
     "Any time you are not completely sure what I am asking for or need clarification, just ask.\n",
     "\n",
+    "When I type @@@, that means I am reminding you of all the above guidelines whenever you appear to have forgotten.\n",
+    "\n",
     "My first request is: [data types]\n",
-    "```\n",
-    "\n",
-    "Later added this:\n",
-    "\n",
-    "```\n",
-    "From now on, when I type text in between !!, it means I ran the code you gave me in a jupyter notebook cell and get the error in between !!.\n",
-    "```\n",
-    "\n",
-    "Then later this:\n",
-    "\n",
-    "```\n",
-    "From now on, when I put text in [], in addition to the instructions I already gave, please also enclose the whole snippet in a lambda and call it, just like you did here.  That way I can paste it directly in jupyter and run it multiple times without name clashes.\n",
     "```\n",
     "\n",
     "And after running for a while, it started forgetting the lambda part, which I need for jupyter, so I had to remind it:\n",
