--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -341,6 +341,66 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "daca0d0a",
+   "metadata": {},
+   "source": [
+    "# Console Logging Levels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "755ef5e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An error occurred!\n",
+      "This is a warning!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Informational message\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  console.log(\"Hello, world!\");\n",
+    "\n",
+    "  console.error(\"An error occurred!\");\n",
+    "\n",
+    "  console.warn(\"This is a warning!\");\n",
+    "\n",
+    "  console.info(\"Informational message\");\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "6b85ea25",
    "metadata": {},
    "source": [
@@ -572,9 +632,80 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0c677cbc",
+   "metadata": {},
+   "source": [
+    "# String Interning\n",
+    "\n",
+    "In general, string objects are created from a **shared pool** and all equivalent strings should have the same **reference equality**.\n",
+    "\n",
+    "However, if you box it as in the 3rd example below, that could change.\n",
+    "\n",
+    "NOTE: interning only applies to strings. Numbers are not interned.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "558db12b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "true\n",
+      "false\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const str1 = \"Hello\";\n",
+    "  const str2 = \"Hello\";\n",
+    "\n",
+    "  console.log(str1 === str2); // true\n",
+    "\n",
+    "  const str3 = \"Hello\";\n",
+    "  const str4 = \"Hel\" + \"lo\";\n",
+    "\n",
+    "  console.log(str3 === str4); // true\n",
+    "\n",
+    "  const str5 = new String(\"Hello\");\n",
+    "  const str6 = new String(\"Hello\");\n",
+    "\n",
+    "  console.log(str5 === str6); // false\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "216143ba",
+   "metadata": {},
+   "source": [
+    "# Serialization\n",
+    "\n",
+    "Use `JSON.stringify` and `JSON.parse` for instance. Or use Google's **protobuf** library.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2608410d",
+   "id": "87b65c02",
    "metadata": {},
    "outputs": [],
    "source": []
