--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1369,9 +1369,121 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d41e0a5b",
+   "metadata": {},
+   "source": [
+    "# Type Unions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "57a4aa99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, TypeScript!\n",
+      "42\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // Define a type union using the \"|\" operator\n",
+    "  type MyType = string | number;\n",
+    "\n",
+    "  // Variable of type union\n",
+    "  let value: MyType;\n",
+    "\n",
+    "  // Assigning string value\n",
+    "  value = \"Hello, TypeScript!\";\n",
+    "  console.log(value); // Output: Hello, TypeScript!\n",
+    "\n",
+    "  // Assigning number value\n",
+    "  value = 42;\n",
+    "  console.log(value); // Output: 42\n",
+    "\n",
+    "  // Error: Assigning boolean value (not in the union type)\n",
+    "  // value = true; // Error: Type 'boolean' is not assignable to type 'MyType'\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a0c0e11d",
+   "metadata": {},
+   "source": [
+    "# Type Alias\n",
+    "\n",
+    "HINT: these might be useful for lambda types.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "911981a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ name: 'John Doe', age: 30, email: 'johndoe@example.com' }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  // Type alias for a person object\n",
+    "  type Person = {\n",
+    "    name: string;\n",
+    "    age: number;\n",
+    "    email: string;\n",
+    "  };\n",
+    "\n",
+    "  type BetterPerson = Person;\n",
+    "\n",
+    "  // Using the type alias\n",
+    "  const person: BetterPerson = {\n",
+    "    name: \"John Doe\",\n",
+    "    age: 30,\n",
+    "    email: \"johndoe@example.com\",\n",
+    "  };\n",
+    "\n",
+    "  console.log(person); // Output: { name: 'John Doe', age: 30, email: 'johndoe@example.com' }\n",
+    "})();\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a4810e5",
+   "id": "18fec00f",
    "metadata": {},
    "outputs": [],
    "source": []
