--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "35f02a1a",
    "metadata": {},
@@ -15,11 +14,10 @@
     "- console\n",
     "- parseInt, etc.\n",
     "- JSON\n",
-    "- built-in JS browser objects like 'this' and 'window'\n"
+    "- built-in JS browser objects like 'this', 'document', and 'window' for DOM manipulation\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e6d662fd",
    "metadata": {},
@@ -30,7 +28,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "eadc7a44",
    "metadata": {},
@@ -99,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f4dfcc83",
    "metadata": {},
@@ -191,7 +187,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4d352274",
    "metadata": {},
@@ -262,7 +257,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2c24e69f",
    "metadata": {},
@@ -383,7 +377,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c805295f",
    "metadata": {},
@@ -483,7 +476,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "29c7fc2a",
    "metadata": {},
